# QuadProgpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Array.cc  Array.hh  CMakeLists.txt  QuadProg++.cc  QuadProg++.hh  main.cc
